--- a/.github/workflows/check_emails_daily.yml
+++ b/.github/workflows/check_emails_daily.yml
@@ -21,9 +21,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           
-      - name: execute py script # run main.py
+      - name: execute py script
         env:
-          SOME_SECRET: ${{ secrets.SOME_SECRET }}
+          EMAIL_ADDRESS: ${{ secrets.EMAIL_ADDRESS }}
+          EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
         run: python worker.py
           
       - name: commit files
