--- a/.github/workflows/check_emails_daily.yml
+++ b/.github/workflows/check_emails_daily.yml
@@ -1,8 +1,9 @@
 name: run worker.py daily
 
 on:
+  workflow_dispatch:
   schedule:
-    - cron: '*/10 * * * *' # Every hour: '0 */1 * * *'
+    - cron: '0 0 * * *' # Every hour: '0 */1 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
